bench/yaml/etc/client_before.yaml
apiVersion: v1
kind: Pod 
metadata:
  name: kube-bench-client
spec:         
  containers:
  - name: client
    image: "docker.io/hokunpark/kube:benchclient"             
    imagePullPolicy: Always
    resources:
     requests:
       cpu: 2
       memory: 2Gi
     limits:
       cpu: 2
       memory: 2Gi
    securityContext:
      runAsUser: 0
    command: ["/bin/sh"]
    args: ["-c", "sleep 3600"]

    volumeMounts:
        - name: kube-bench-client-vol
          mountPath: /home/dnclab/hokun/kube

  volumes:
    - name: kube-bench-client-vol
      emptyDir:
        sizeLimit: 5Gi  

  nodeSelector:
     key: worker1
