bench/yaml/etc/server_before.yaml
apiVersion: v1
kind: Pod 
metadata:
  name: kube-bench-server

spec:         
  containers:
  - name: server
    image: "docker.io/hokunpark/kube:benchserver"             
    imagePullPolicy: Always
    resources:
     requests:
       cpu: 2
       memory: 2Gi
     limits:
       cpu: 2
       memory: 2Gi
    securityContext:
      runAsUser: 0      
    command: ["/bin/sh"]
    args: ["-c", "sleep 3600"]
    
    volumeMounts:
        - name: kube-bench-server-vol
          mountPath: /home/dnclab/hokun/kube

  volumes:
    - name: kube-bench-server-vol
      emptyDir:
        sizeLimit: 5Gi

  nodeSelector:
     key: worker1
