bench/yaml/etc/destination.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: kube-bench-server-dr
spec:
  host: kube-bench-server-service
  subsets:
  - name: v1
    labels:
      version: v1
