bench/yaml/etc/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: kube-bench-server-vs
spec:
  hosts:
  - kube-bench-server-service
  http:
  - route:
    - destination:
        host: kube-bench-server-service
        subset: v1
